--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
 <!DOCTYPE html>
 <meta charset="utf-8" />
 <title>Toolla</title>
-<meta property="og.image" value="/logo.png" />
+<meta property="og.image" value="./logo.png" />
